# allplan-mcp-bridge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE_CODE_PROJECT_PLAN.md  CONTRIBUTING.md  ONBOARDING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  installation.md  ipc-protocol.md  threading-model.md  threat-model.md  tool-catalog.md
scripts/: generate_tool_catalog.py  install_pythonpart.py  setup_colleague.ps1
src/allplan_agent/: AllplanMcpBridge.py  command_queue.py  dispatcher.py  errors.py  listener.py  main_loop.py  pythonpart_entry.py  safety.py
src/allplan_agent/handlers/: __init__.py  _allplan.py  attributes.py  document.py  geometry.py  ifc.py  layers.py
src/allplan_mcp_server/: __main__.py  config.py  element_cache.py  grid_store.py  logging.py  metrics.py  security.py  server.py
src/allplan_mcp_server/ipc/: client.py  framing.py  named_pipe.py  tcp.py  transport.py
src/allplan_mcp_server/models/: attributes.py  geometry.py  grid.py  ifc.py  layers.py  references.py
src/allplan_mcp_server/tools/: __init__.py  attributes.py  document.py  geometry.py  grid.py  health.py  ifc.py  (+1 more)
tests/: conftest.py
tests/e2e/: README.md  test_wall_creation.py
tests/fakes/: fake_agent.py  fake_allplan_api.py
tests/integration/: conftest.py  test_tool_roundtrip.py
tests/unit/: test_command_queue.py  test_config.py  test_dispatcher.py  test_framing.py  test_grid.py  test_handlers.py  test_install_script.py  test_ipc_client.py  test_logging.py  test_main_loop.py  test_metrics.py  test_models.py  test_security.py
